# shuttle-etl

./: .gitignore  Cargo.toml  README.md  Secrets.example.toml  Shuttle.toml  TUTORIAL.md
migrations/: 001_create_etl_results.sql
src/: main.rs
