[package]
name = "shuttle-etl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
shuttle-runtime = "0.55.0"
shuttle-axum = "0.55.0"
shuttle-opendal = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
tokio = { version = "1.0", features = ["full"] }
polars = { version = "0.49.1", features = ["lazy", "parquet"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
opendal = "0.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tempfile = "3.0"
